--- a/.cproject
+++ b/.cproject
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?>
+
+<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="cdt.managedbuild.config.gnu.exe.debug.275614584">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.config.gnu.exe.debug.275614584" moduleId="org.eclipse.cdt.core.settings" name="Debug">
@@ -139,7 +141,9 @@
 								<option id="gnu.cpp.compiler.exe.release.option.debugging.level.1749830006" name="Debug Level" superClass="gnu.cpp.compiler.exe.release.option.debugging.level" value="gnu.cpp.compiler.debugging.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.other.other.384834626" name="Other flags" superClass="gnu.cpp.compiler.option.other.other" value="-c -fmessage-length=0 -std=c++11" valueType="string"/>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.1228011064" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def"/>
-								<option id="gnu.cpp.compiler.option.include.paths.207508771" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths"/>
+								<option id="gnu.cpp.compiler.option.include.paths.207508771" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Homegear/ARM headers}&quot;"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.480556670" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.1596702609" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release">
@@ -152,7 +156,6 @@
 								<option id="gnu.cpp.link.option.libs.1593030355" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="pthread"/>
 									<listOptionValue builtIn="false" value="sqlite3"/>
-									<listOptionValue builtIn="false" value="ncurses"/>
 								</option>
 								<option id="gnu.cpp.link.option.paths.1346637154" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Homegear/ARM libraries}&quot;"/>
@@ -194,22 +197,28 @@
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886;cdt.managedbuild.config.gnu.exe.release.636457886.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1893626820;cdt.managedbuild.tool.gnu.cpp.compiler.input.852683577">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.275614584;cdt.managedbuild.config.gnu.exe.debug.275614584.;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1788255390;cdt.managedbuild.tool.gnu.c.compiler.input.1181581060">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886.850304687;cdt.managedbuild.config.gnu.exe.release.636457886.850304687.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1054642898;cdt.managedbuild.tool.gnu.cpp.compiler.input.480556670">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886.398503056;cdt.managedbuild.config.gnu.exe.release.636457886.398503056.;cdt.managedbuild.tool.gnu.cross.c.compiler.385010696;cdt.managedbuild.tool.gnu.c.compiler.input.214842575">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.275614584;cdt.managedbuild.config.gnu.exe.debug.275614584.;cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1788255390;cdt.managedbuild.tool.gnu.c.compiler.input.1181581060">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886;cdt.managedbuild.config.gnu.exe.release.636457886.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.1061484532;cdt.managedbuild.tool.gnu.c.compiler.input.2012490794">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886.398503056;cdt.managedbuild.config.gnu.exe.release.636457886.398503056.;cdt.managedbuild.tool.gnu.cross.c.compiler.385010696;cdt.managedbuild.tool.gnu.c.compiler.input.214842575">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.debug.275614584;cdt.managedbuild.config.gnu.exe.debug.275614584.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1796046322;cdt.managedbuild.tool.gnu.cpp.compiler.input.1073675196">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886.398503056;cdt.managedbuild.config.gnu.exe.release.636457886.398503056.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.1172402790;cdt.managedbuild.tool.gnu.c.compiler.input.481086580">
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886.850304687;cdt.managedbuild.config.gnu.exe.release.636457886.850304687.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.1596702609;cdt.managedbuild.tool.gnu.c.compiler.input.688626578">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886.398503056;cdt.managedbuild.config.gnu.exe.release.636457886.398503056.;cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1569393277;cdt.managedbuild.tool.gnu.cpp.compiler.input.1077961073">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886.398503056;cdt.managedbuild.config.gnu.exe.release.636457886.398503056.;cdt.managedbuild.tool.gnu.c.compiler.exe.release.1172402790;cdt.managedbuild.tool.gnu.c.compiler.input.481086580">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.config.gnu.exe.release.636457886.398503056;cdt.managedbuild.config.gnu.exe.release.636457886.398503056.;cdt.managedbuild.tool.gnu.cross.cpp.compiler.371711185;cdt.managedbuild.tool.gnu.cpp.compiler.input.1368188500">
